# haystac-nlp-demo

./: Dockerfile  README.md  pyproject.toml  runner.py
tests/: test_haystack_nlp_demo.py
