[tool.poetry]
name = "haystack-nlp-demo"
version = "0.1.0"
description = ""
authors = ["thingumajig <artifex.i@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.8.1"
torch = "^1.11.0"
transformers = "^4.17.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
